--- a/src/CoWorkingBooking.Service/CoWorkingBooking.Service.csproj
+++ b/src/CoWorkingBooking.Service/CoWorkingBooking.Service.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
