SERVICE: Added View Models

--- a/src/CoWorkingBooking.Service/CoWorkingBooking - Backup (1).Service.csproj
+++ b/src/CoWorkingBooking.Service/CoWorkingBooking - Backup (1).Service.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\CoWorkingBooking.Domain\CoWorkingBooking.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
