SERVICE: added user service

--- a/src/CoWorkingBooking.Api/CoWorkingBooking.Api.csproj
+++ b/src/CoWorkingBooking.Api/CoWorkingBooking.Api.csproj
@@ -15,7 +15,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\CoWorkingBooking.Data\CoWorkingBooking.Data.csproj" />
+    <ProjectReference Include="..\CoWorkingBooking.Data\CoWorkingBooking.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
