--- a/src/CoWorkingBooking.Service/CoWorkingBooking.Service.csproj
+++ b/src/CoWorkingBooking.Service/CoWorkingBooking.Service.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="Mapster" Version="6.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CoWorkingBooking.Data\CoWorkingBooking.Data.csproj" />
   </ItemGroup>
 
 </Project>
