--- a/src/CoWorkingBooking.Api/CoWorkingBooking.Api.csproj
+++ b/src/CoWorkingBooking.Api/CoWorkingBooking.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\CoWorkingBooking.Data\CoWorkingBooking.Data.csproj" />
+    <ProjectReference Include="..\CoWorkingBooking.Data\CoWorkingBooking.Data.csproj" />
   </ItemGroup>
 
 </Project>
