--- a/src/CoWorkingBooking.Data/CoWorkingBooking.Data.csproj
+++ b/src/CoWorkingBooking.Data/CoWorkingBooking.Data.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Common\**" />
+    <EmbeddedResource Remove="Common\**" />
+    <None Remove="Common\**" />
+  </ItemGroup>
+
+  <ItemGroup>
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.7">
 		  <PrivateAssets>all</PrivateAssets>
@@ -15,10 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CoWorkingBooking.Domain\CoWorkingBooking.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Common\" />
   </ItemGroup>
 
 </Project>
