--- a/src/CoWorkingBooking.Api/appsettings.json
+++ b/src/CoWorkingBooking.Api/appsettings.json
@@ -8,5 +8,41 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=muham1812;Database=CoWorkingBookingDb;"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Error",
+        "System": "Debug"
+      }
+    },
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs\\RestApiLog.log",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] [{EventId}] {Message}{NewLine}{Exception}",
+          "rollOnFileSizeLimit": true,
+          "fileSizeLimitBytes": 4194304,
+          "retainedFileCountLimit": 15,
+          "rollingInterval": "Minute"
+        }
+      }
+    ]
+  },
+  "Jwt": {
+    "Issuer": "starbuckscoffee",
+    "Key": "b0694d83-18fc-465f-abbd-dfcd94d1eca8",
+    "lifetime": 1
   }
 }
