BUG: fixed some bugs api and service layers

--- a/src/CoWorkingBooking.Api/appsettings.json
+++ b/src/CoWorkingBooking.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=muham1812;Database=CoWorkingBookingDb;"
+    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=12042003;Database=CoWorkingBookingDb;"
   },
   "Serilog": {
     "Using": [
